--- a/src/styles/Mission.css
+++ b/src/styles/Mission.css
@@ -1,5 +1,6 @@
 .tablecontainer {
-    width: 100%;
+    width: 90%;
+    margin-left: 65px;
   }
   
   .tablechild {
@@ -16,28 +17,50 @@
     text-align: left;
     border-bottom: 1px solid #ddd;
     border-right: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-top: 1px solid #ddd;
   }
   
   th:last-child, td:last-child {
     border-right: 1px solid #ddd;
   }
+
+  td.name {
+    font-weight: 650;
+  }  
   
   th {
-    background-color: #f2f2f2;
+    background-color: white;
+  }
+
+  td {
+    background-color:  #f5f5f5;
   }
   
   td button {
-    padding: 5px 10px;
-    border: none;
-    background-color: grey;
-    color: #fff;
+    padding: 5px 20px;
+    background-color: #f5f5f5;
     cursor: pointer;
+    white-space: nowrap;
   }
+
+  td button .btn {
+    border: none;
+  }
+
+  .not-member-btn {
+    padding: 5px 20px;
+    background-color: grey;
+    cursor: pointer;
+    white-space: nowrap;
+    border: none;
+  }
+  
   
   td button:not(:last-child) {
     margin-right: 5px;
   }
-  
+
   tr:hover {
     background-color: #f5f5f5;
   }
