--- a/src/styles/Mission.css
+++ b/src/styles/Mission.css
@@ -1,69 +1,70 @@
 .tablecontainer {
-    width: 90%;
-    margin-left: 65px;
-  }
-  
-  .tablechild {
-    margin: 0 auto;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-  }
-  
-  th:last-child, td:last-child {
-    border-right: 1px solid #ddd;
-  }
+  width: 90%;
+  margin-left: 65px;
+}
 
-  td.name {
-    font-weight: 650;
-  }  
-  
-  th {
-    background-color: white;
-  }
+.tablechild {
+  margin: 0 auto;
+}
 
-  td {
-    background-color:  #f5f5f5;
-  }
-  
-  td button {
-    padding: 5px 20px;
-    background-color: #f5f5f5;
-    cursor: pointer;
-    white-space: nowrap;
-  }
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  td button .btn {
-    border: none;
-  }
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+}
 
-  .not-member-btn {
-    padding: 1px 12px;
-    background-color: grey;
-    color: white;
-    cursor: pointer;
-    white-space: nowrap;
-    border: none;
-    border-style: ridge;
-  }
-  
-  
-  td button:not(:last-child) {
-    margin-right: 5px;
-  }
+th:last-child,
+td:last-child {
+  border-right: 1px solid #ddd;
+}
 
-  tr:hover {
-    background-color: #f5f5f5;
-  }
-  
+td.name {
+  font-weight: 650;
+}
+
+th {
+  background-color: white;
+}
+
+td {
+  background-color: #f5f5f5;
+}
+
+td button {
+  padding: 5px 20px;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+td button .btn {
+  border: none;
+}
+
+.not-member-btn {
+  padding: 1px 12px;
+  background-color: grey;
+  color: white;
+  cursor: pointer;
+  white-space: nowrap;
+  border: none;
+  border-style: ridge;
+}
+
+
+td button:not(:last-child) {
+  margin-right: 5px;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
