--- a/src/styles/Mission.css
+++ b/src/styles/Mission.css
@@ -1,6 +1,15 @@
 .tablecontainer {
-  width: 90%;
-  margin-left: 65px;
+  width: 96%;
+  margin-left: 30px;
+  margin-top: 35px;
+}
+
+.line {
+  border: none;
+  height: 1px;
+  background-color: #ddd;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .tablechild {
