--- a/src/styles/Mission.css
+++ b/src/styles/Mission.css
@@ -1,7 +1,7 @@
 .tablecontainer {
   width: 96%;
   margin-left: 30px;
-  margin-top: 35px;
+  margin-top: 25px;
 }
 
 .line {
@@ -21,6 +21,14 @@ table {
   border-collapse: collapse;
 }
 
+tbody tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+tbody tr:nth-child(even) {
+  background-color: white;
+}
+
 th,
 td {
   padding: 10px;
@@ -33,10 +41,6 @@ td {
 
 th {
   background-color: white;
-}
-
-td {
-  background-color: #f5f5f5;
 }
 
 th:last-child,
