--- a/src/styles/Mission.css
+++ b/src/styles/Mission.css
@@ -18,11 +18,18 @@
   border: 1px solid red;
 }
 
+.join {
+  background-color: #ddd;
+  color: black;
+  border: 1px solid rgb(0, 0, 0);
+}
+
 .active-member-btn {
   background-color: rgb(0, 81, 255);
   color: white;
   border: none;
   padding: 1px 12px;
+  border-radius: 14px;
 }
 
 .tablechild {
@@ -74,10 +81,6 @@ td button {
   background-color: #f5f5f5;
   cursor: pointer;
   white-space: nowrap;
-}
-
-td button .btn {
-  border: none;
 }
 
 .not-member-btn {
