Finish all the tasks

--- a/src/styles/Rocket.css
+++ b/src/styles/Rocket.css
@@ -20,3 +20,18 @@
   margin: unset;
   margin-top: 10px;
 }
+
+.cancelStyle {
+  width: 140px;
+  background-color: transparent;
+  color: gray;
+  border: 1px solid gray;
+}
+
+.reservedSpan {
+  color: white;
+  background-color: #1aa0d9;
+  border-radius: 8px;
+  padding: 5px;
+  display: inline-block;
+}
